--- a/style.less
+++ b/style.less
@@ -75,6 +75,10 @@ footer nav ul li a:link:active, a:visited:active {
     background-size: cover;
 }
 
+.round {
+    border-radius: 2vmin;
+}
+
 .discord-message .avatar:hover{
     box-shadow: 0 0 1vmin .1vmin black;
     cursor: pointer;
@@ -151,12 +155,20 @@ img {
     flex-direction: row;
 }
 
+.column {
+    flex-direction: column;
+}
+
 .font-size-title{
     font-size: 4vmin;
 }
 
 .font-size-button{
     font-size: 2.5vmin;
+}
+
+.font-size-avgnormal {
+    font-size: 3vmin;
 }
 
 .font-size-normal{
@@ -167,12 +179,33 @@ img {
     width: 40vw;
 }
 
-.mediumtop {
+.flex {
+    display: flex;
+    align-items: center;
+}
+
+.medium-top {
     margin-top: 4vmax !important;
 }
 
+.small-top {
+    margin-top: 2vmin !important;
+}
+
 .medium-padding {
-    padding: 2vmax !important;
+    padding: 2vmax 2vmax 0 2vmax !important;
+}
+
+.small-margin {
+    margin: 1vmax !important;
+}
+
+.gray-bg {
+    background-color: #2f3136;
+}
+
+.medium-box-padding {
+    padding: calc(2vmax - 2vmin);
 }
 
 .button {
@@ -195,6 +228,12 @@ img {
 
 .small-image {
     width: 5vmax;
+}
+
+.command {
+    img {
+        width: 30%;
+    }
 }
 
 .hello {
